# la-patate-chaude

.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: client.rs  main.rs  main2.rs
client/src/recover_secret/: mod.rs  recover_secret.rs
client/src/tcp_client/: mod.rs  tpc_client.rs
common/: Cargo.toml
common/src/: challenge.rs  lib.rs  md5_challenge.rs  md5_checker.rs  models.rs
common/src/challenge/: challenge.rs  md5_challenge.rs  mod.rs
