[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rand = "0.8.5"
clap = "3.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
